fixed product grid card status dot align

--- a/src/app/common/cards/product-grid-card/product-grid-card.component.scss
+++ b/src/app/common/cards/product-grid-card/product-grid-card.component.scss
@@ -77,7 +77,7 @@ img-app {
 	height: $image-height;
 	border-top-left-radius: var(--border-radius);
 	border-top-right-radius: var(--border-radius);
-	margin-bottom: var(--spacing-s);
+	margin-bottom: var(--spacing-xs);
 }
 
 .product-price {
@@ -95,5 +95,6 @@ img-app {
 	.badge {
 		height: 8px;
 		min-width: 8px;
+		margin-top: 6px
 	}
 }
